--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "author": "Shane Thompson",
   "license": "ISC",
+  "dependencies": {
+    "vite": "^5.4.7"
+  },
   "devDependencies": {
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^8.10.0",
